[package]
name = "wchisp"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wchisp"
documentation = "https://docs.rs/wchisp/"
homepage = "https://github.com/ch32-rs/wchisp"
categories = ["embedded", "command-line-utilities", "command-line-utilities"]
description = "A command-line implementation of WCHISPTool, for flashing ch32 MCUs"
keywords = ["wch", "cli", "ch32", "embedded"]
readme = "README.md"
license = "GPL-2.0"

[features]
default = ["vendored-libusb"]

vendored-libusb = ["rusb/vendored"]


[dependencies]
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"
rusb = { version = "0.9.1" }
bitfield = "0.13.2"
scroll = "0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
log = "0.4.8"
hex = "0.4"
simplelog = "0.12"
