[package]
name = "wchisp"
version = "0.3.0"
edition = "2024"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wchisp"
documentation = "https://docs.rs/wchisp/"
homepage = "https://github.com/ch32-rs/wchisp"
categories = ["embedded", "command-line-utilities", "command-line-utilities"]
description = "A command-line implementation of WCHISPTool, for flashing ch32 MCUs"
keywords = ["wch", "cli", "ch32", "embedded"]
readme = "README.md"
license = "GPL-2.0"
include = ["**/*.rs", "devices/**/*.yaml", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
rand = "0.9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
nusb = "0.2"
bitfield = "0.19.4"
scroll = "0.13.0"
simplelog = "0.12"
hex = "0.4"
ihex = "3"
hxdmp = "0.2"
object = { version = "0.38.0", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
indicatif = "0.18.3"
serialport = { version = "4.7", default-features = false }
libloading = "0.9.0"
